// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfigTestCases records issue-2991 exported tests should write relative paths to records 1`] = `
"{
  \\"chunks\\": {
    \\"byName\\": {
      \\"main\\": 0
    },
    \\"bySource\\": {
    },
    \\"usedIds\\": [
      0
    ]
  },
  \\"modules\\": {
    \\"byIdentifier\\": {
      \\"external \\\\\\"fs\\\\\\"\\": 2,
      \\"external \\\\\\"path\\\\\\"\\": 3,
      \\"ignored  pkgs/somepackage/foo\\": 1,
      \\"test.js\\": 0
    },
    \\"usedIds\\": [
      0,
      1,
      2,
      3
    ]
  }
}"
`;

exports[`ConfigTestCases records issue-7339 exported tests should write relative dynamic-require paths to records 1`] = `
"{
  \\"chunks\\": {
    \\"byName\\": {
      \\"main\\": 0
    },
    \\"bySource\\": {
    },
    \\"usedIds\\": [
      0
    ]
  },
  \\"modules\\": {
    \\"byIdentifier\\": {
      \\"dependencies sync /^\\\\\\\\.\\\\\\\\/.*$/\\": 3,
      \\"dependencies/bar.js\\": 0,
      \\"dependencies/foo.js\\": 1,
      \\"external \\\\\\"fs\\\\\\"\\": 4,
      \\"external \\\\\\"path\\\\\\"\\": 5,
      \\"test.js\\": 2
    },
    \\"usedIds\\": [
      0,
      1,
      2,
      3,
      4,
      5
    ]
  }
}"
`;
